z-index fix

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ nav ul li {
   justify-content: space-around;
   font-weight: 100;
   margin-bottom: 1rem;
+  padding-bottom: 5rem;
 }
 
 .hero-headings .h4-2 {
@@ -92,12 +93,12 @@ nav ul li {
 .folder-UI .folders.folder-3,
 .folder-UI .folders.folder-6 {
   top: -50%;
-  z-index: 3;
+  /* z-index: 3; */
 }
 
 .folder-UI .folders.folder-5 {
   right: 0%;
-  z-index: 2;
+  /* z-index: 2; */
   width: 65%;
 }
 
@@ -107,7 +108,7 @@ nav ul li {
   width: 100%;
   position: relative;
   display: flex;
-  z-index: 3;
+  /* z-index: 3; */
 }
 
 .folder-UI .folders .folder-top .folder-no {
@@ -124,7 +125,7 @@ nav ul li {
   height: 75%;
   width: 100%;
   background-color: var(--folder-yellow-color);
-  z-index: 9;
+  /* z-index: 9; */
 }
 
 /* .folder-UI .folders.folder-2 {
@@ -164,27 +165,28 @@ nav ul li {
   background-color: blue;
   position: absolute;
   left: 40%;
-  top: 100%;
-  z-index: -1;
-  /* display: none; */
+  top: 60%;
+  /* z-index: -1; */
+  display: none;
 }
 
 .folder-UI .project-images div img {
   width: 176px;
-  height: 193;
-  width: 100%;
-  height: 100%;
+  height: 230px;
+  /* width: 100%;
+  height: 100%; */
   object-fit: cover;
+  /* display: none; */
 }
 
 .folder-UI .project-images div:nth-child(1) {
   background-color: pink;
-  top: 100%;
+  top: 60%;
   left: 58%;
 }
 
 .folder-UI .project-images div:nth-child(2) {
   background-color: black;
-  top: 100%;
+  top: 60%;
   left: 20%;
 }
